# Jurastic-Park

./: CMakeLists.txt  carnivor.cpp  carnivor.h  dinosaur.cpp  dinosaur.h  herbivor.cpp  herbivor.h  main.cpp  random.cpp  random.h  raptoren.cpp  raptoren.h  trexe.cpp  trexe.h
